--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^47.0.13",
+    "expo": "^47.0.14",
     "expo-status-bar": "~1.0.4",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.5",
-    "react-native-sound": "^0.11.2",
-    "react-native-sound-player": "^0.13.2"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
